crates/uitest/fixtures/name_resolution/conflict_field.snap
---
source: crates/uitest/tests/name_resolution.rs
expression: diags
input_file: fixtures/name_resolution/conflict_field.fe
---
error[3-0017]: duplicate field name in struct `MyS`
  ┌─ conflict_field.fe:2:5
  │
2 │     x: i32,
  │     ^ `x` is defined here
3 │     x: u32,
  │     - `x` is redefined here
